[package]
name = "stationeers-mips-extractor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minidom="*"
rxml="*"
similar = "*"

[[bin]]
name="extract-mips"
path= "src/extract-mips.rs"

[[bin]]
name="guess-diff"
path="src/guess-diff.rs"
